--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         android:name = "ua.teampush.appteampush.TeamPushApplication">
         <activity
             android:name=".LoadingActivity"
+            android:windowSoftInputMode="adjustResize"
+
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -32,18 +34,22 @@
         </activity>
         <activity
             android:name=".LoginActivity"
+            android:windowSoftInputMode="stateVisible|adjustResize"
             android:label="@string/LoginActivity" >
         </activity>
         <activity
             android:name=".RegisterActivity"
+            android:windowSoftInputMode="stateVisible|adjustResize"
             android:label="@string/RegisterActivity" >
         </activity>
         <activity
             android:name=".WeAreInActivity"
+            android:windowSoftInputMode="stateVisible|adjustResize"
             android:label="@string/WeAreInActivity" >
         </activity>
         <activity
             android:name=".MainActivity"
+            android:windowSoftInputMode="stateVisible|adjustResize"
             android:label="@string/title_activity_main" >
         </activity>
         <service android:name="com.parse.PushService" />
